syntax = "proto3";

import "akkaserverless/annotations.proto";

package ecommerce.persistence;

// this is external interface for internal events

option (akkaserverless.file).event_sourced_entity = {
    name: "ShoppingCart"
    entity_type: "cart"
    state: "Cart"
    events: "ItemAdded"
    events: "ItemRemoved"
};

// These messages are internal events
message ItemAdded {
    LineItem item = 1;
}

message ItemRemoved {
    string productId = 1;
}

message Cart {
    repeated LineItem items = 1;
}

message LineItem {
    string productId = 1;
    string name = 2;
    int32 quantity = 3;
}
